tests/type-errors/no_container_partition_variable.arl
archetype no_container_partition_variable

asset et identified by cid { cid: int; }

asset e identified by eid {
	eid			: string;
	cells		: partition<et>;
}

variable c : partition<et> = []

entry start () {
	effect {
		()
	}
}
